<resources>
    <string name="app_name">GymCounter_test_04</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">true</string>
    <string name="navigation_drawer_close">false</string>
    <string name="title_activity_charts">ChartsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="exercise_description">Description</string>
    <string name="edit_exercise_button">Edit</string>
    <string name="delete_exercise_button">Delete Exercise</string>
    <string name="cancel_button">Cancel</string>
    <string name="apply_button">Apply</string>
    <string name="no_description_text">No description available</string>
    <string name="enter_title_hint">Enter title</string>
    <string name="title">Title</string>
    <string name="default_set_text_upper">DEFAULT SET</string>
    <string name="open_charts">Open Charts</string>
    <string name="exercise_name_hint">Exercise Name</string>
    <string name="exercise_description_hint">Exercise description</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="set_reps">Set Reps</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="set">Set</string>
    <string name="sets">Sets</string>
    <string name="set_name">set name</string>
    <string name="create_new_exercise_floating_button">Create new Exercise</string>
    <string name="before_date">Before date</string>
    <string name="after_date">TODO</string>
    <string name="plus_symbol">+</string>
    <string name="edit_set_name">Edit Set Name</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="delete_set">Delete Set</string>
    <string name="new_exercise">New Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="new_set">New SET</string>
    <string name="start_counting">START</string>
    <string name="stop_counting">STOP</string>


</resources>